fixed spacing issue on mobile

--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -13,6 +13,7 @@
 
   #skills-container {
     justify-content: flex-start ;
+    padding-top: 40%;
 
   }
 
